--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "victory": "^37.3.6",
+    "victory-native": "^41.19.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
